package com.christielen.informacoescadastrais.security.jwt;

import lombok.Getter;

@Getter
public class AccountCredentials {

	private String username;
	private String password;
}
